css/estilos.css
body{
	overflow-x: none;
	padding: 0;
	margin:0;
	font-family: sans-serif;
}
/* Pagina principal */
/* Header de la pagina web */
#header{
	background-color: #2b2c2b;
	/* Los porcentajes son otra forma de presentar una medida */
	height: 100%;
	width: 100%;
}
#header img{
	margin-left: 8px;
	width: 100%;
	height: auto;
}

/* Contenido prinpipal */
#FotoHome{
	/* Define una imagen de fonto */ 
	background-image: url(../recursos/silla.jpg);
	/* Evita que se repita la imagen de fondo */
	background-repeat: no-repeat;

	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;

	height: 900px;
	/*height: 960px;
	width: 1450px;*/

	padding: 10px;
}


#menu-inicio{
	margin-top: 64px;
	background-color: transparent;
	
}

h1{
	color: #855600;
	font-size: 20px;
	text-align: left;	
}
#quienes-somosback{
	background-color: #bebebe;
	background-image: url(../recursos/doctor.jpg);
	/* Posicionamiento de la imagen */
	background-repeat: no-repeat;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
	height: 960px;
	width: auto;
	margin-top: 16px;

}
#quienes-somos{
	background-color: #2b2c2b;
	height: 127px;
	width: 746px;
}

#info-quienes-somos {
	/* Transparencia */ 
	opacity: 0.7;
	width: 400px;
	height: 400px; 
	background-color: black;
	float: right;
	margin-top: 128px;
	margin-right: 16px;
	/*position: relative;
	
	margin-right: -600px;
	margin-top: 170px;*/
	padding: 20px;
}
#info-quienes-somos h1{
	/* Esto centra el texto */
	text-align: center;
	/* Esto agrega espacio entre letras */
	letter-spacing: 3px;
	color: white;
	/* Esto pone el texto en mayuscula */
	text-transform: uppercase;
}
#info-quienes-somos p{
	color: white;
	/* Esto justifica el texto */
	text-align: justify;
	margin: 32px;
}

/* Antes y Despues */
#antes-back{
	margin-top: 16px;
	margin-bottom: 0;
	height: 500px;
	width: 100%;
	background-image: url(../recursos/sonrisas.jpg);

	background-repeat: no-repeat;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
}
#antesydespues{
	background-color: #2b2c2b;
	height: 127px;
	width: 746px;
}

#info-antes {
	margin-top: 0;
	width: 100%;
	height: 450px; 
	background-color: #2b2c2b;
}
/* Fuente: https://stackoverflow.com/questions/19302122/how-to-put-a-text-beside-the-image-html */
#info-antesCuadro{
	background-color: #2b2c2b;
	margin-top: 0;
	text-align: center;
}

#info-antesCuadro img{
	margin-top: 64px;
	display:inline-block;
	vertical-align:middle;
	width:20%;
	height:20%;
}
#info-antesTexto{
	margin-left: 64px;
	display: inline-block;
}
#info-antesTexto h1{
	text-align: center;
	color:white;
	letter-spacing: 3px;
	text-transform: uppercase;
}
#info-antesTexto p{
	color: white;
	text-align: justify;
}

/* Laboratorio */
#laboratorio-back{
	margin-top: 16px;
	margin-bottom: 0;
	height: 500px;
	width: 100%;
	background-image: url(../recursos/modelos.jpg);

	background-repeat: no-repeat;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
}
#laboratorio {
	background-color: #2b2c2b;
	height: 127px;
	width: 746px;
}

#laboratorioInfo {
	margin-top: 0;
	width: 100%;
	height: 450px; 
	background-color: #2b2c2b;
}
/* Fuente: https://stackoverflow.com/questions/19302122/how-to-put-a-text-beside-the-image-html */
#laboratorioCuadro{
	background-color: #2b2c2b;
	margin-top: 0;
	text-align: center;
}

#laboratorioCuadroImagen{
	margin-top: 64px;
	display:inline-block;
	vertical-align:middle;
}
#laboratorioCuadroImagen{
	height: 30%;
	width: 30%;
}
#laboratorioTexto{
	margin-left: 64px;
	display: inline-block;
}
#laboratorioTexto h1{
	text-align: center;
	color:white;
	letter-spacing: 3px;
	text-transform: uppercase;
}
#laboratorioTexto p{
	color: white;
	text-align: justify;
}
#laboratorioBoton{
	width:15%;
	height:15%;
	margin-left: 32px;
}
/* Orden Digital*/
#orden-back{
	margin-top: 32px;
	background-color: white;
	height: 960px;
	width: 1450x;
	text-align: center;
}
#orden{
	background-color: #2b2c2b;
	height: 127px;
	width: 746px;
}


#Ordentrabajo img{
	margin-top: 24px;
	text-align: center;
}

